[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Player Sprites/013.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles.png" type="Texture" id=2]
[ext_resource path="res://Game/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://Game/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/TurnTimer.gd" type="Script" id=5]
[ext_resource path="res://Assets/Player Sprites/010.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player Sprites/019.png" type="Texture" id=7]
[ext_resource path="res://Assets/Player Sprites/016.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player Sprites/009.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player Sprites/015.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player Sprites/005.png" type="Texture" id=11]
[ext_resource path="res://Assets/Player Sprites/004.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player Sprites/006.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player Sprites/018.png" type="Texture" id=14]
[ext_resource path="res://Assets/Player Sprites/003.png" type="Texture" id=15]
[ext_resource path="res://Assets/Player Sprites/007.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player Sprites/000.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player Sprites/008.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player Sprites/002.png" type="Texture" id=19]
[ext_resource path="res://Assets/Player Sprites/020.png" type="Texture" id=20]
[ext_resource path="res://Assets/Player Sprites/017.png" type="Texture" id=21]
[ext_resource path="res://Assets/Player Sprites/001.png" type="Texture" id=22]
[ext_resource path="res://Assets/Player Sprites/012.png" type="Texture" id=23]
[ext_resource path="res://Assets/Player Sprites/011.png" type="Texture" id=24]
[ext_resource path="res://Assets/Player Sprites/014.png" type="Texture" id=25]
[ext_resource path="res://Game/FileSelect.tscn" type="PackedScene" id=26]

[sub_resource type="TileSet" id=1]
2/name = "Tiles.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 385, 1, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tiles.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 449, 1, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Tiles.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 513, 1, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Tiles.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 449, 65, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Tiles.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 513, 65, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tiles.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 577, 65, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Knight_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 12 ) ],
"loop": true,
"name": "Wizard_Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 17 ) ],
"loop": false,
"name": "Knight_Attacking",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "Archer_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "Wizard_Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 15 ) ],
"loop": true,
"name": "Knight_Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 11 ) ],
"loop": true,
"name": "Archer_Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "Archer_Attacking",
"speed": 20.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 22 ) ],
"loop": false,
"name": "Wizard_Attacking",
"speed": 20.0
} ]

[sub_resource type="GDScript" id=3]
script/source = "extends AnimatedSprite

signal done_moving

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

onready var tween = $Tween
const TILESIZE = 64
const XOFFSET = 320 - 11
const YOFFSET = 0 - 14
var my_class = \"Wizard\"
const class_movement = {\"Archer\": 7, \"Wizard\": 7, \"Knight\": 7}
onready var move_time_unit = $\"../TurnTimer\".wait_time / 5
# Called when the node enters the scene tree for the first time.
func _ready():
	pass
	

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func moveTo(new_pos):
	
	var y_dist = new_pos[1] - ((self.position.y - YOFFSET) / TILESIZE)
	if (abs(y_dist) > 0):
		moveY(y_dist)
		yield(tween, \"tween_completed\")
	
	var x_dist = new_pos[0] - ((self.position.x - XOFFSET) / TILESIZE)
	if (abs(x_dist) > 0):
		moveX(x_dist)
		yield(tween, \"tween_completed\")
	emit_signal(\"done_moving\")
	

func moveY(y_dist):
	var y_time = abs((move_time_unit / class_movement[my_class]) * y_dist)
	
	if tween.interpolate_property(self, 'position', 
		position, Vector2(self.position.x, y_dist * TILESIZE + self.position.y), y_time, 
		Tween.TRANS_LINEAR, Tween.EASE_IN_OUT):
			tween.start()
			self.play(my_class + \"_Walking\")


func moveX(x_dist):
	var x_time = abs((move_time_unit / class_movement[my_class]) * x_dist)
	
	if tween.interpolate_property(self, 'position', 
		position, Vector2(x_dist * TILESIZE + self.position.x, self.position.y), x_time, 
		Tween.TRANS_LINEAR, Tween.EASE_IN_OUT):
			tween.start()
			self.play(my_class + \"_Walking\")
			if x_dist < 0:
				self.flip_h = true
			else:
				self.flip_h = false


func updateClass(new_class):
	my_class = new_class
	self.play(my_class + \"_Idle\")

func instantMoveTo(new_pos):
	self.position = Vector2((new_pos[0]*TILESIZE) + XOFFSET, (new_pos[1]*TILESIZE) + YOFFSET)

func attack(target: Vector2):
	self.play(my_class + \"_Attacking\")
	if (target.x > self.position.x):
		self.flip_h = false
	elif (target.x < self.position.x):
		self.flip_h = true

func _on_Tween_tween_completed(object, key):
	self.play(my_class + \"_Idle\")
"

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 320, 0 )
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 2, 0, 2, 5, 0, 3, 2, 0, 4, 5, 0, 5, 2, 0, 6, 5, 0, 7, 2, 0, 8, 5, 0, 9, 3, 0, 10, 0, 0, 11, 0, 0, 65536, 2, 0, 65537, 5, 0, 65538, 2, 0, 65539, 5, 0, 65540, 2, 0, 65541, 5, 0, 65542, 2, 0, 65543, 5, 0, 65544, 2, 0, 65545, 5, 0, 65547, 0, 0, 131072, 5, 0, 131073, 2, 0, 131074, 5, 0, 131075, 2, 0, 131076, 5, 0, 131077, 2, 0, 131078, 5, 0, 131079, 2, 0, 131080, 5, 0, 131081, 2, 0, 131083, 0, 0, 196608, 2, 0, 196609, 5, 0, 196610, 2, 0, 196611, 5, 0, 196612, 2, 0, 196613, 5, 0, 196614, 2, 0, 196615, 5, 0, 196616, 2, 0, 196617, 5, 0, 196619, 0, 0, 262144, 5, 0, 262145, 2, 0, 262146, 5, 0, 262147, 2, 0, 262148, 4, 0, 262149, 4, 0, 262150, 5, 0, 262151, 2, 0, 262152, 5, 0, 262153, 2, 0, 262155, 0, 0, 327680, 2, 0, 327681, 5, 0, 327682, 2, 0, 327683, 5, 0, 327684, 4, 0, 327685, 4, 0, 327686, 2, 0, 327687, 5, 0, 327688, 2, 0, 327689, 5, 0, 327691, 0, 0, 393216, 5, 0, 393217, 2, 0, 393218, 5, 0, 393219, 2, 0, 393220, 5, 0, 393221, 2, 0, 393222, 5, 0, 393223, 2, 0, 393224, 5, 0, 393225, 2, 0, 393227, 0, 0, 458752, 2, 0, 458753, 5, 0, 458754, 2, 0, 458755, 5, 0, 458756, 2, 0, 458757, 5, 0, 458758, 2, 0, 458759, 5, 0, 458760, 2, 0, 458761, 5, 0, 458763, 0, 0, 524288, 5, 0, 524289, 2, 0, 524290, 5, 0, 524291, 2, 0, 524292, 5, 0, 524293, 2, 0, 524294, 5, 0, 524295, 2, 0, 524296, 5, 0, 524297, 2, 0, 589824, 3, 0, 589825, 5, 0, 589826, 2, 0, 589827, 5, 0, 589828, 2, 0, 589829, 5, 0, 589830, 2, 0, 589831, 5, 0, 589832, 2, 0, 589833, 3, 0, 655360, 0, 0, 655371, 0, 0, 720896, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0 )

[node name="PlayerController" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="TurnTimer" type="Timer" parent="PlayerController"]
wait_time = 5.0
autostart = true
script = ExtResource( 5 )

[node name="PlayerOne" type="AnimatedSprite" parent="PlayerController"]
visible = false
frames = SubResource( 2 )
animation = "Archer_Idle"
centered = false
script = SubResource( 3 )

[node name="Tween" type="Tween" parent="PlayerController/PlayerOne"]

[node name="PlayerTwo" type="AnimatedSprite" parent="PlayerController"]
visible = false
frames = SubResource( 2 )
animation = "Archer_Idle"
centered = false
script = SubResource( 3 )

[node name="Tween" type="Tween" parent="PlayerController/PlayerTwo"]

[node name="PlayerThree" type="AnimatedSprite" parent="PlayerController"]
visible = false
frames = SubResource( 2 )
animation = "Archer_Idle"
centered = false
script = SubResource( 3 )

[node name="Tween" type="Tween" parent="PlayerController/PlayerThree"]

[node name="PlayerFour" type="AnimatedSprite" parent="PlayerController"]
visible = false
frames = SubResource( 2 )
animation = "Archer_Idle"
centered = false
script = SubResource( 3 )

[node name="Tween" type="Tween" parent="PlayerController/PlayerFour"]

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Node" type="Node" parent="."]

[node name="FileSelect" parent="Node" instance=ExtResource( 26 )]

[connection signal="timeout" from="PlayerController/TurnTimer" to="PlayerController" method="_on_Timer_timeout"]
[connection signal="done_moving" from="PlayerController/PlayerOne" to="PlayerController" method="_on_PlayerOne_done_moving"]
[connection signal="tween_completed" from="PlayerController/PlayerOne/Tween" to="PlayerController/PlayerOne" method="_on_Tween_tween_completed"]
[connection signal="done_moving" from="PlayerController/PlayerTwo" to="PlayerController" method="_on_PlayerTwo_done_moving"]
[connection signal="tween_completed" from="PlayerController/PlayerTwo/Tween" to="PlayerController/PlayerTwo" method="_on_Tween_tween_completed"]
[connection signal="done_moving" from="PlayerController/PlayerThree" to="PlayerController" method="_on_PlayerThree_done_moving"]
[connection signal="tween_completed" from="PlayerController/PlayerThree/Tween" to="PlayerController/PlayerThree" method="_on_Tween_tween_completed"]
[connection signal="done_moving" from="PlayerController/PlayerFour" to="PlayerController" method="_on_PlayerFour_done_moving"]
[connection signal="tween_completed" from="PlayerController/PlayerFour/Tween" to="PlayerController/PlayerFour" method="_on_Tween_tween_completed"]
[connection signal="file_loaded" from="Node/FileSelect" to="PlayerController" method="_on_FileSelect_file_loaded"]
